# notelm

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
scripts/: fix_cuda_torch.sh  move_files.sh  run_lab.sh  setup.sh  train_tmux.sh
src/: api.py  app.py  inference.py  score.py  train.py
src/models/: lstm.py
src/utils/: data.py  midi_fmt.py  notify.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.jsx  MidiPlayer.jsx  ScoreViewer.jsx  api.js  index.css
