[project]
name = "notelm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.0",
    "pretty_midi>=0.2.11",
    "tqdm>=4.66",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
score = ["music21>=9.1"]
