[project]
name = "notelm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.0",
    "pretty_midi>=0.2.11",
    "tqdm>=4.66",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
score = ["music21>=9.1"]

# Linux PyPI torch 2.12 ships CUDA 13 libs and needs a very new driver.
# Use PyTorch's cu124 wheels on Linux so CUDA 12.x drivers (e.g. 12.7) work.
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124", marker = "sys_platform == 'linux'" }
